--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/assist": "^3.0.8",
     "@sanity/document-internationalization": "^3.0.1",
     "@sanity/language-filter": "^4.0.2",
     "@sanity/vision": "^3.55.0",
     "i18n": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.55.0",
+    "sanity": "^3.64.2",
     "sanity-plugin-google-translate": "^3.0.0",
     "styled-components": "^6.1.8"
   },
